# cobalt-task-editor

./: .pre-commit-config.yaml  .prettierignore  CI_CD.md  README.md  README_zh.md  TESTING.md  TODO.md  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/: copilot-instructions.md
.serena/: project.yml
app/: globals.css  layout.tsx
app/editor/: page.tsx
app/simple/: page.tsx
components/: theme-toggle.tsx
components/__tests__/: theme-provider.test.tsx  theme-toggle.test.tsx
components/nina/: ExposureTable.tsx  LanguageSelector.tsx  OnboardingTour.tsx  PropertyPanel.tsx  SequenceEditor.tsx  SequenceTabs.tsx  (+8 more)
lib/: utils.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  tests.rs
src-tauri/src/commands/: astronomy_commands.rs  backup_commands.rs  calculator_commands.rs  clipboard_commands.rs  export_commands.rs  file_commands.rs  import_commands.rs  log_commands.rs  mod.rs  nina_commands.rs  optimizer_commands.rs  sequence_commands.rs  settings_commands.rs  template_commands.rs
src-tauri/src/models/: common.rs  coordinates.rs  mod.rs  sequence.rs  simple_sequence.rs
src-tauri/src/services/: astronomy.rs  astronomy_tests.rs  backup_service.rs  calculator.rs  clipboard_service.rs  export_service.rs  export_tests.rs  file_service.rs  import_service.rs  import_tests.rs  log_service.rs  mod.rs  nina_serializer.rs  optimizer_tests.rs  sequence_optimizer.rs  serializer.rs  settings_service.rs  template_service.rs  validator.rs
(+193 files in other folders)
