[package]
name = "app"
version = "0.1.0"
description = "Cobalt Task Editor - NINA Sequence Editor"
authors = ["ElementAstro"]
license = "MIT"
repository = "https://github.com/ElementAstro/cobalt-task-editor"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
# Tauri core and plugins
tauri = { version = "2.9.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
csv = "1.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
log = "0.4"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
directories = "6.0"
parking_lot = "0.12"
once_cell = "1.20"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Regex (lightweight)
regex-lite = "0.1"

# Parallel processing
rayon = "1.10"
